matched curly braces

--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -9,7 +9,7 @@
 	<h1>Residence Halls</h1>
 	{% for resHalls in resHallsList %}
 
-	<p>{{resHalls.name}</p>
+	<p>{{resHalls.name}}</p>
 	{% endfor %}
 
 
