--- a/dormapp/templates/homePage.html
+++ b/dormapp/templates/homePage.html
@@ -1,29 +1,20 @@
-<DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-	<title>DormReviews</title>
-</head>
-
-<body>
-
-	<h1> DormReviews </h1>
-	<div class="universityDropDown">
-		<form action="resHalls" method="POST">{% csrf_token %}
-			<label for="universities">Select a school</label>
-			<select name="universities" id="universities">
-			{% for universities in universitiesList %}
-				<option value= {{universities.id}}>{{ universities.name }}</option>
+{% block content %}
+<div class="universityDropDown">
+	<form action="resHalls" method="POST">{% csrf_token %}
+		<label for="universities">Select a school</label>
+		<select name="universities" id="universities">
+		{% for universities in universitiesList %}
+			<option value= {{universities.id}}>{{ universities.name }}</option>
 		
 	   
-	    	{% endfor %}
-	    	</select>
-	    	<input type="submit" value="Submit">
-		</form>
+	    {% endfor %}
+	    </select>
+	    <input type="submit" value="Submit">
+	</form>
 
-	</div>
+</div>
 
 
-</body>
-
-</html>
+{% endblock %}
