changed resHall page and base.html

--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -5,7 +5,7 @@
 <h1>Residence Halls</h1>
 {% for resHalls in resHallsList %}
 
-	<p>{{resHalls.name}} - {{resHalls.averageRating}}</p>
+	<p>{{resHalls.name}},{{resHalls.averageRating}}</p>
 {% endfor %}
 
 
