--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -4,8 +4,16 @@
 {% block content %}
 <h1>Residence Halls</h1>
 {% for resHalls in resHallsList %}
+	<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">{{resHalls.name}}</h5>
+    <p class="card-text">Rating: {{resHalls.rating}}</p>
+    <a href="#" class="stretched-link">Go somewhere</a>
+    
+  </div>
+</div>
 
-	<p>{{resHalls.name}},{{resHalls.rating}}</p>
+	
 {% endfor %}
 
 
