--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -3,11 +3,20 @@
 
 {% block content %}
 <h1>Residence Halls</h1>
-{% for resHalls in resHallsList %}
+{% for resHall in resHallsList %}
 
-	<p>{{resHalls.name}},{{resHalls.rating}}</p>
+	<p>{{resHall.name}},{{resHall.rating}}</p>
+	<input id="rating-system-{{resHalls.name}}" value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5" step="1">
 {% endfor %}
 
-
-
+<script>
+	$(document).ready(function(){
+		$('.starRating').each(function() {
+			$(this).rating({
+				displayOnly: true, 
+				step: 0.1
+			});
+		});
+});
+</script>
 {% endblock %}
