fixed some bullshit

--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -7,10 +7,10 @@
 
 	<div class="card">
   	<div class="card-body">
-    <h5 class="card-title">{{resHalls.name}}</h5>
-    <p class="card-text">Rating: {{resHalls.rating}}</p>
-	<input id=""rating-system-{{resHalls.name}} value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
-    <a href="resHalls/{{resHalls.name}}" class="stretched-link"></a>
+    <h5 class="card-title">{{resHall.name}}</h5>
+    <p class="card-text">Rating: {{resHall.rating}}</p>
+	<input id=""rating-system-{{resHall.name}} value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
+    <a href="resHalls/{{resHall.name}}" class="stretched-link"></a>
     
   </div>
 </div>
