dorm rooms page with url working

--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -1,16 +1,15 @@
-
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Residence Halls at {{universityName}}</h1>
-{% for resHall in resHallsList %}
+<h1>{{resHallName}}</h1>
+<!-- {% for resHall in resHallsList %}
 
 	<div class="card">
   	<div class="card-body">
     <h5 class="card-title">{{resHall.name}}</h5>
     <p class="card-text">Rating: {{resHall.rating}}</p>
 	<input id="rating-system-{{resHall.id}}" value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
-    <a href="/dormapp/{{resHall.id}}/dormRooms" class="stretched-link"></a>
+    <a href="/dormapp/{{resHall.id}}/" class="stretched-link"></a>
     
   </div>
 </div>
@@ -29,5 +28,5 @@
 			});
 		});
 });
-</script>
+</script> -->
 {% endblock %}
