--- a/dormapp/templates/resHalls.html
+++ b/dormapp/templates/resHalls.html
@@ -7,6 +7,9 @@
 
 	<div class="card">
   	<div class="card-body">
+	{% load static %}
+	<img src="{% static resHall.thumbnail %}" alt=resHall.name
+		style="width:300px;height:200px"/>
     <h5 class="card-title">{{resHall.name}}</h5>
     <p class="card-text">Rating: {{resHall.rating}}</p>
 	<input id="rating-system-{{resHall.id}}" value="{{resHall.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
