--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -31,32 +31,44 @@
 </script> -->
 
 
+        	
+     
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+  Write Review
 </button>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+    	<form id="reviewForm" action="addReview" method="POST">
+        	{% csrf_token %}
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Review for {{resHallName}}</h5>
+        <h5 class="modal-title" id="staticBackdropLabel">{{resHallName}} Review</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="" method="POST">
-        	{% csrf_token %}
-        	{{form}}
+      	
+        	<label for="reviewTitle">Review Title:</label><br>
+        	<input type="text" id="reviewTitle" name="reviewTitle"><br>
+        	<label for="rating">Rating:</label><br>
+        	<input type="number" id="rating" name="rating"><br>
+        	<textarea id="comments" name="comments" rows="4" cosl="50">
+        	</textarea>
+        	<br>
+        	<input type="text" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
         	
-       </form>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <input type="submit" value="Submit">
 
       </div>
+       </form>
     </div>
   </div>
 </div>
+
 {% endblock %}
