--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -99,7 +99,7 @@
     <h5 class="card-title">{{dormRoom.roomNumber}}</h5>
     <p class="card-text">Rating: {{dormRoom.rating}}</p>
 	<input id="rating-system-{{dormRoom.id}}" value="{{dormRoom.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
-    <a href="/dormapp/dormroom/{{dormRoom.id}}" class="stretched-link"></a>
+    <a href="/dormapp/{{dormRoom.id}}/reviews" class="stretched-link"></a>
     
   </div>
 </div>
