--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -1,14 +1,66 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>{{dormName}}</h1>
+{% load static %}
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-	Write Review
-</button>
+<div class="row">
+	<div class="col">
+		<!-- Room number and buttons-->
+		<h2>Room {{dormName}}</h2>
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+			Write Review
+		</button>
+		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#photoPopup">
+			Upload Photo
+		</button>
+	</div>
+	<div class="col">
+		<!-- Photo Carousel -->
+		{% if photoCount %}
+			<div id="resHallCarousel" class="carousel slide" data-bs-ride="false">
+				<div class="carousel-indicators">
+				{% for photo in dormRoomPhotos %}
+					<button type="button" data-bs-target="#resHallCarousel" data-bs-slide-to="{{forloop.counter0}}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{forloop.counter}}"></button>
+				{% endfor %}
+				</div>
+				<div class="carousel-inner">
+				{% for photo in dormRoomPhotos %}
+					<div class="carousel-item{% if forloop.first %} active{% endif %}">
+						<img src="{% static photo.photo %}" class="d-block w-100" alt="Photo {{forloop.counter}}">
+					</div>
+				{% endfor %}
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#resHallCarousel" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#resHallCarousel" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+		{% else %}
+			<a class="link-primary" data-bs-toggle="modal" data-bs-target="#photoPopup" href="#">
+				Be the first to upload a photo of this room!
+			</a>
+		{% endif %}
+	</div>
+	<div class="row">
+		<!-- Dorm Reviews -->
+		<h2>Reviews:</h2>
+		{% for review in dormReviewList %}
+			<div class="card">
+				<div class="card-body">
+					<h6 class="card-title">{{review.reviewTitle}}</h6>
+					<p class="card-text">{{review.dateCreated}}</p>
+					<input id="rating-system-{{review.id}}" value="{{review.starRating}}" type="number" class="rating-loading starRating" min="0" max="5">
+					<p class="card-text">{{review.reviewBody}}</p>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
+</div>
 
-
-<!-- Modal -->
+<!-- Write Review Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
@@ -26,7 +78,7 @@
 					<label for="rating">Rating:</label><br>
 					<input type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
 					<textarea id="comments" name="comments" rows="4" cosl="50">
-        			</textarea>
+					</textarea>
 					<br>
 					<input type="text" value="{{dormId}}" id="dormId" name="dormId" hidden disabled>
 
@@ -42,10 +94,7 @@
 	</div>
 </div>
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#photoPopup">
-	Upload Photo
-</button>
-<!-- Photo -->
+<!-- Upload Photo Modal -->
 <div class="modal fade" id="photoPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
@@ -63,7 +112,7 @@
 					<label for="rating">Rating:</label><br>
 					<input type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
 					<textarea id="comments" name="comments" rows="4" cosl="50">
-        			</textarea>
+					</textarea>
 					<br>
 					<input type="text" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled> {% endcomment %}
 					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg">
@@ -78,18 +127,6 @@
 		</div>
 	</div>
 </div>
-<!-- Dorm Reviews -->
-<h2>Reviews:</h2>
-{% for review in dormReviewList %}
-	<div class="card">
-		<div class="card-body">
-			<h6 class="card-title">{{review.reviewTitle}}</h6>
-			<p class="card-text">{{review.dateCreated}}</p>
-			<input id="rating-system-{{review.id}}" value="{{review.starRating}}" type="number" class="rating-loading starRating" min="0" max="5">
-			<p class="card-text">{{review.reviewBody}}</p>
-		</div>
-	</div>
-{% endfor %}
 
 
 <script>
