--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -6,9 +6,8 @@
 	<div class="col">
 		<!-- Res Hall Name, buttons -->
 		<h2>{{resHallName}}</h2>
-
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-	Write Review
+			Write Review
 		</button>
 		<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#photoPopup">
 			Upload Photo
@@ -16,28 +15,34 @@
 	</div>
 	<div class="col">
 		<!-- Photo Carousel -->
-		<div id="resHallCarousel" class="carousel slide" data-bs-ride="false">
-			<div class="carousel-indicators">
-			{% for photo in resHallPhotos %}
-				<button type="button" data-bs-target="#resHallCarousel" data-bs-slide-to="{{forloop.counter0}}" class="active" aria-current="true" aria-label="Slide {{forloop.counter}}"></button>
-			{% endfor %}
-			</div>
-			<div class="carousel-inner">
-			{% for photo in resHallPhotos %}
-				<div class="carousel-item{% if forloop.first %} active{% endif %}">
-					<img src="{% static photo.photo %}" class="d-block w-100" alt="Photo {{forloop.counter}}">
+		{% if photoCount %}
+			<div id="resHallCarousel" class="carousel slide" data-bs-ride="false">
+				<div class="carousel-indicators">
+				{% for photo in resHallPhotos %}
+					<button type="button" data-bs-target="#resHallCarousel" data-bs-slide-to="{{forloop.counter0}}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{forloop.counter}}"></button>
+				{% endfor %}
 				</div>
-			{% endfor %}
+				<div class="carousel-inner">
+				{% for photo in resHallPhotos %}
+					<div class="carousel-item{% if forloop.first %} active{% endif %}">
+						<img src="{% static photo.photo %}" class="d-block w-100" alt="Photo {{forloop.counter}}">
+					</div>
+				{% endfor %}
+				</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#resHallCarousel" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button class="carousel-control-next" type="button" data-bs-target="#resHallCarousel" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
+		{% else %}
+			<a class="link-primary" data-bs-toggle="modal" data-bs-target="#photoPopup" href="#">
+				Be the first to upload a photo of this residence hall!
+			</a>
+		{% endif %}
 	</div>
 </div>
 <div class="row">
