--- a/dormapp/templates/base.html
+++ b/dormapp/templates/base.html
@@ -24,11 +24,11 @@
 	<link rel="stylesheet" href="{% static 'css/index.css' %}">
 
 	<title>DormReviews</title>
-
 </head>
+
 <body>
 	<header class="d-flex justify-content-center py-3">
-		<h1><a class="link-dark no-underline" href="/dormapp/">DormReviews</a></h1>
+		<h1><a class="logo-link no-underline" href="/dormapp/">DormReviews</a></h1>
 	  </header>
 	<div class="container">
 		{% block content %}
