--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,13 @@
 .no-underline {
     text-decoration: none;
 }
+
+.logo-link {
+    color: #803218;
+}
+
+.logo-link:hover {
+    color: black;
+    text-decoration: underline;
+
+}
