--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -86,27 +86,32 @@
 		<div class="modal-content">
 			<form id="reviewForm" action="addReview" method="POST">
 				{% csrf_token %}
-				<div class="modal-header">
-					<h5 class="modal-title" id="staticBackdropLabel">{{resHallName}} Review</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
+					<div class="modal-header">
+						<h5 class="modal-title" id="staticBackdropLabel">{{resHallName}} Review</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<label for="reviewTitle">Review Title:</label><br>
+							<input class="form-control" type="text" id="reviewTitle" name="reviewTitle"><br>
+						</div>
+						<div class="form-group">
+							<label for="rating">Rating:</label><br>
+							<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
+						</div>
+						<div class="form-group">
+							<label for="comments">Review body:</label>
+							<textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
+						</div>
+						<input type="text" class="" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
 
-					<label for="reviewTitle">Review Title:</label><br>
-					<input type="text" id="reviewTitle" name="reviewTitle"><br>
-					<label for="rating">Rating:</label><br>
-					<input type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
-					<textarea id="comments" name="comments" rows="4" cosl="50">
-        			</textarea>
-					<br>
-					<input type="text" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
 
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<input type="submit" class="btn btn-primary" value="Submit">
 
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					<input type="submit" class="btn btn-primary" value="Submit">
-
+					</div>
 				</div>
 			</form>
 		</div>
