--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -48,7 +48,7 @@
 <div class="row">
 	<div class="col">
 		<!-- Res Hall Reviews -->
-		<h2>Reviews:</h2>
+		<h3>Reviews:</h3>
 		{% for review in resHallReviewList %}
 			<div class="card">
 				<div class="card-body">
@@ -62,7 +62,7 @@
 	</div>
 	<div class="col">
 		<!-- Dorm Rooms List-->
-		<h2>Dorm Rooms:</h2>
+		<h3>Dorm Rooms:</h3>
 		{% for dormRoom in dormRoomList %}
 			<div class="card">
 				<div class="card-body">
@@ -92,7 +92,7 @@
 					</div>
 					<div class="modal-body">
 						<div class="form-group">
-							<label for="reviewTitle">Review Title:</label><br>
+							<label for="reviewTitle">Review title:</label><br>
 							<input class="form-control" type="text" id="reviewTitle" name="reviewTitle"><br>
 						</div>
 						<div class="form-group">
