--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -84,39 +84,38 @@
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form id="reviewForm" action="addReview" method="POST">
+			<form id="reviewForm" action="addReview" method="POST" autocomplete="off">
 				{% csrf_token %}
-					<div class="modal-header">
-						<h5 class="modal-title" id="staticBackdropLabel">{{resHallName}} Review</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				<div class="modal-header">
+					<h5 class="modal-title" id="staticBackdropLabel">{{resHallName}} Review</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="form-group">
+						<label for="reviewTitle">Review title:</label><br>
+						<input class="form-control" type="text" id="reviewTitle" name="reviewTitle" autofocus><br>
 					</div>
-					<div class="modal-body">
-						<div class="form-group">
-							<label for="reviewTitle">Review title:</label><br>
-							<input class="form-control" type="text" id="reviewTitle" name="reviewTitle"><br>
-						</div>
-						<div class="form-group">
-							<label for="rating">Rating:</label><br>
-							<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
-						</div>
-						<div class="form-group">
-							<label for="comments">Review body:</label>
-							<textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
-						</div>
-						<input type="text" class="" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
+					<div class="form-group">
+						<label for="rating">Rating:</label><br>
+						<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
+					</div>
+					<div class="form-group">
+						<label for="comments">Review body:</label>
+						<textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
+					</div>
+					<input type="text" class="" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled>
 
 
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-						<input type="submit" class="btn btn-primary" value="Submit">
-
-					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					<input type="submit" class="btn btn-primary" value="Submit">
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
+
 
 <!-- Upload Photo Modal -->
 <div class="modal fade" id="photoPopup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -166,8 +165,9 @@
 			});
 		});
 
-		// Show editable stars on add review modal
+		// Write review modal
 		$('#staticBackdrop').on('shown.bs.modal', function () {
+			// initialize star input
 			$('#rating').rating({
 				displayOnly: false, 
 				step: 1,
@@ -175,10 +175,12 @@
 				showClear: false
 
 			});
-		});
-	});
-	
 
+			// autofocus on title field
+			$(this).find('[autofocus]').focus();
+		});
+
+	});
 </script>
 
 {% endblock %}
