--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -25,7 +25,7 @@
 				<div class="carousel-inner">
 				{% for photo in resHallPhotos %}
 					<div class="carousel-item{% if forloop.first %} active{% endif %}">
-						<img src="{% static photo.photo %}" class="d-block w-100" alt="Photo {{forloop.counter}}">
+						<img src="/media/{{photo.photo}}" class="d-block w-100" alt="Photo {{forloop.counter}}">
 					</div>
 				{% endfor %}
 				</div>
@@ -144,7 +144,6 @@
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 					<input type="submit" class="btn btn-primary" value="Submit">
-
 				</div>
 			</form>
 		</div>
