--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -99,24 +99,14 @@
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form id="photoForm" action="addPhoto" method="POST">
+			<form id="photoForm" action="addDormRoomPhoto" method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">
 					<h5 class="modal-title" id="staticBackdropLabel">{{dormName}} Review</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-
-					{% comment %} <label for="reviewTitle">Review Title:</label><br>
-					<input type="text" id="reviewTitle" name="reviewTitle"><br>
-					<label for="rating">Rating:</label><br>
-					<input type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
-					<textarea id="comments" name="comments" rows="4" cosl="50">
-					</textarea>
-					<br>
-					<input type="text" value="{{resHallId}}" id="resHallId" name="resHallId" hidden disabled> {% endcomment %}
-					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg">
-
+					<input type="file" id="myPhoto" name="myPhoto" accept="image/png, image/jpeg, image/gif">
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
