--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -18,14 +18,14 @@
 		{% if photoCount %}
 			<div id="resHallCarousel" class="carousel slide" data-bs-ride="false">
 				<div class="carousel-indicators">
-				{% for photo in dormRoomPhotos %}
+				{% for photo in dormPhotos %}
 					<button type="button" data-bs-target="#resHallCarousel" data-bs-slide-to="{{forloop.counter0}}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{forloop.counter}}"></button>
 				{% endfor %}
 				</div>
 				<div class="carousel-inner">
-				{% for photo in dormRoomPhotos %}
+				{% for photo in dormPhotos %}
 					<div class="carousel-item{% if forloop.first %} active{% endif %}">
-						<img src="{% static photo.photo %}" class="d-block w-100" alt="Photo {{forloop.counter}}">
+						<img src="/media/{{photo.photo}}" class="d-block w-100" alt="Photo {{forloop.counter}}">
 					</div>
 				{% endfor %}
 				</div>
