--- a/dormapp/templates/dormRooms.html
+++ b/dormapp/templates/dormRooms.html
@@ -86,8 +86,10 @@
 		{% for dormRoom in dormRoomList %}
 			<div class="card">
 				<div class="card-body">
+				{% if dormRoom.thumbnail %}
 				<img src="/media/{{dormRoom.thumbnail}}" alt="{{dormRoom.roomNumber}}"
 					style="width:300px;height:200px"/>
+				{% endif %}
 				<h5 class="card-title">{{dormRoom.roomNumber}}</h5>
 				<p class="card-text">Rating: {{dormRoom.rating}}</p>
 				<input id="rating-system-{{dormRoom.id}}" value="{{dormRoom.rating}}" type="number" class="rating-loading starRating" min="0" max="5">
