--- a/dormapp/templates/dormReviews.html
+++ b/dormapp/templates/dormReviews.html
@@ -80,34 +80,36 @@
 	</div>
 </div>
 
-<!-- Write Review Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
 	aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form id="dormReviewForm" action="addDormReview" method="POST">
+			<form id="reviewForm" action="addDormReview" method="POST" autocomplete="off">
 				{% csrf_token %}
 				<div class="modal-header">
 					<h5 class="modal-title" id="staticBackdropLabel">{{dormName}} Review</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-
-					<label for="dormReviewTitle">Review Title:</label><br>
-					<input type="text" id="reviewTitle" name="reviewTitle"><br>
-					<label for="rating">Rating:</label><br>
-					<input type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
-					<textarea id="comments" name="comments" rows="4" cosl="50">
-					</textarea>
-					<br>
-					<input type="text" value="{{dormId}}" id="dormId" name="dormId" hidden disabled>
+					<div class="form-group">
+						<label for="reviewTitle">Review title:</label><br>
+						<input class="form-control" type="text" id="reviewTitle" name="reviewTitle" autofocus><br>
+					</div>
+					<div class="form-group">
+						<label for="rating">Rating:</label><br>
+						<input class="form-control" type="number" id="rating" name="rating" class="rating-loading" min="0" max="5"><br>
+					</div>
+					<div class="form-group">
+						<label for="comments">Review body:</label>
+						<textarea class="form-control" id="comments" name="comments" rows="4"></textarea>
+					</div>
+					<input type="text" class="" value="{{dormId}}" id="dormId" name="dormId" hidden disabled>
 
 
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 					<input type="submit" class="btn btn-primary" value="Submit">
-
 				</div>
 			</form>
 		</div>
@@ -152,8 +154,9 @@
 			});
 		});
 
-		// Show editable stars on add review modal
+		// Write review modal
 		$('#staticBackdrop').on('shown.bs.modal', function () {
+			// initialize star input
 			$('#rating').rating({
 				displayOnly: false, 
 				step: 1,
@@ -161,6 +164,9 @@
 				showClear: false
 
 			});
+
+			// autofocus on title field
+			$(this).find('[autofocus]').focus();
 		});
 	});
 	
